new_isa_tests/test_cmov/test_cmov.asm.err
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_call_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_cmov_instruction
Parsing Exception: test_cmov.aligned.mcode:132:14: expecting LPAREN, found '?'
Error: Register 7 multiply written in bundle 32
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_cmov_instruction
Parsing Exception: test_cmov.aligned.mcode:168:14: expecting LPAREN, found '?'
Error: Register 10 multiply written in bundle 0
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_cmov_instruction
Parsing Exception: test_cmov.aligned.mcode:204:14: expecting LPAREN, found '?'
Error: Register 13 multiply written in bundle 0
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_branch_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_return_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_instruction
Info: finished parsing file test_cmov.aligned.mcode
Info:  Bundle id=0 addr=0 pad amount 0
Info:  Bundle id=1 addr=2 pad amount 0
Info:  Bundle id=2 addr=4 pad amount 0
Info:  Bundle id=3 addr=8 pad amount 0
Info:  Bundle id=4 addr=10 pad amount 0
Info:  Bundle id=5 addr=18 pad amount 0
Info:  Bundle id=6 addr=20 pad amount 0
Info:  Bundle id=7 addr=21 pad amount 0
Info:  Bundle id=8 addr=22 pad amount 0
Info:  Bundle id=9 addr=24 pad amount 0
Info:  Bundle id=10 addr=28 pad amount 0
Info:  Bundle id=11 addr=30 pad amount 0
Info:  Bundle id=12 addr=34 pad amount 0
Info:  Bundle id=13 addr=38 pad amount 0
Info:  Bundle id=14 addr=40 pad amount 0
Info:  Bundle id=15 addr=48 pad amount 0
Info:  Bundle id=16 addr=50 pad amount 0
Info:  Bundle id=17 addr=58 pad amount 0
Info:  Bundle id=18 addr=5a pad amount 0
Info:  Bundle id=19 addr=5c pad amount 0
Info:  Bundle id=20 addr=60 pad amount 0
Info:  Bundle id=21 addr=68 pad amount 0
Info:  Bundle id=22 addr=70 pad amount 0
Info:  Bundle id=23 addr=72 pad amount 0
Info:  Bundle id=24 addr=74 pad amount 0
Info:  Bundle id=25 addr=78 pad amount 0
Info:  Bundle id=26 addr=80 pad amount 0
Info:  Bundle id=27 addr=88 pad amount 0
Info:  Bundle id=28 addr=8a pad amount 0
Info:  Bundle id=29 addr=8c pad amount 0
Info:  Bundle id=30 addr=90 pad amount 0
Info:  Bundle id=31 addr=98 pad amount 0
Info:  Bundle id=32 addr=a0 pad amount 0
Info:  Bundle id=33 addr=a1 pad amount 0
Info:  Bundle id=34 addr=a2 pad amount 0
Info:  Bundle id=35 addr=a4 pad amount 0
Info:  Bundle id=36 addr=a8 pad amount 0
Info:  Bundle id=37 addr=b0 pad amount 0
Info:  Bundle id=38 addr=b1 pad amount 0
Info:  Bundle id=39 addr=b2 pad amount 0
Info:  Bundle id=40 addr=b4 pad amount 0
Info:  Bundle id=41 addr=b8 pad amount 0
Info: call label main translated to pc-relative 40
Info: branch label main_epilogue translated to pc-relative 8
