new_isa_tests/test_cmov/test_cmov.aligned.mcode
apara_start:
    || 
    $set     $r28    0    1024
    $set     $r27    0    32760
    ;
    || 
    +            $r26    ($i64)    $r0    $r27
    +            $r30    ($i64)    $r0        0
    ;
pad_4__0:
    || 
    $null
    $null
    $null
    $null
    ;
    || 
    +            $r30    ($i64)    $r0        0
    $null
    $null
    $null
    $st   ($i32)   [$r28  + 0]    $r30
    $null
    $null
    $null
    ;
    || 
    +            $r30    ($i64)    $r0        0
    $null
    $null
    $null
    $st   ($i32)   [$r28  + 8]    $r30
    $null
    $null
    $null
    ;
    || 
    $call    main
    $null
    $null
    $null
    $st   ($i32)   [$r28  + 16]    $r30
    $null
    $null
    $null
    ;
    || 
    $halt
    ;
pad_1__2:
    || 
    $null
    ;
pad_2__4:
    || 
    $null
    $null
    ;
pad_4__6:
    || 
    $null
    $null
    $null
    $null
    ;
main:
    || 
    +            $r26    ($i64)    $r0    $r27
    $set     $r1    0    832
    $null
    $null
    $st   ($i64)   [$r27  + 0]    $r26
    $null
    $null
    $null
    ;
    || 
    -            $r27    ($i64)    $r27    $r1
    +            $r1    ($i64)    $r26        -8
    +            $r2    ($i64)    $r0        5
    $null
    ;
pad_4__8:
    || 
    $null
    $null
    $null
    $null
    ;
    || 
    +            $r2    ($i64)    $r0        -3
    +            $r3    ($i64)    $r26        -16
    $null
    $null
    $st   ($i32)   [$r1  + 0]    $r2
    $null
    $null
    $null
    ;
    || 
    +            $r4    ($i64)    $r26        -24
    +            $r5    ($i64)    $r0        0
    $null
    $null
    $st   ($i32)   [$r3  + 0]    $r2
    $null
    $null
    $null
    ;
    || 
    +            $r5    ($i64)    $r26        -8
    $null
    $null
    $null
    $st   ($i32)   [$r4  + 0]    $r5
    $null
    $null
    $null
    ;
    || 
    $set     $r8    0    999
    +            $r9    ($i64)    $r0        100
    $null
    $null
    $ld    ($i32)   $r6    [$r5 + 0]
    $null
    $null
    $null
    ;
    || 
    +            $r7    ($i64)    $r0    $r8
    $cmov    ? ($i64)  $r9 >          $r7    $r6
    ;
pad_2__10:
    || 
    $null
    $null
    ;
pad_4__12:
    || 
    $null
    $null
    $null
    $null
    ;
    || 
    +            $r8    ($i64)    $r26        -16
    $null
    $null
    $null
    $st   ($i32)   [$r28  + 0]    $r7
    $null
    $null
    $null
    ;
    || 
    $set     $r11    0    999
    +            $r12    ($i64)    $r0        200
    $null
    $null
    $ld    ($i32)   $r9    [$r8 + 0]
    $null
    $null
    $null
    ;
    || 
    +            $r10    ($i64)    $r0    $r11
    $cmov    ? ($i64)  $r12 <          $r10    $r9
    ;
pad_2__14:
    || 
    $null
    $null
    ;
pad_4__16:
    || 
    $null
    $null
    $null
    $null
    ;
    || 
    +            $r11    ($i64)    $r26        -24
    $null
    $null
    $null
    $st   ($i32)   [$r28  + 8]    $r10
    $null
    $null
    $null
    ;
    || 
    $set     $r14    0    999
    +            $r15    ($i64)    $r0        300
    $null
    $null
    $ld    ($i32)   $r12    [$r11 + 0]
    $null
    $null
    $null
    ;
    || 
    +            $r13    ($i64)    $r0    $r14
    $cmov    ? ($i64)  $r15 ==         $r13    $r12
    ;
pad_2__18:
    || 
    $null
    $null
    ;
pad_4__20:
    || 
    $null
    $null
    $null
    $null
    ;
    || 
    $null
    $null
    $null
    $null
    $st   ($i32)   [$r28  + 16]    $r13
    $ld    ($i32)   $r14    [$r28 + 0]
    $ld    ($i32)   $r15    [$r28 + 8]
    $null
    ;
    || 
    +            $r16    ($i64)    $r14    $r15
    $null
    $null
    $null
    $ld    ($i32)   $r17    [$r28 + 16]
    $null
    $null
    $null
    ;
    || 
    +            $r18    ($i64)    $r16    $r17
    ;
pad_1__22:
    || 
    $null
    ;
pad_2__24:
    || 
    $null
    $null
    ;
pad_4__26:
    || 
    $null
    $null
    $null
    $null
    ;
    || 
    ? ($i64)  $r0 ==    $goto    main_epilogue
    +            $r1    ($i64)    $r0    $r18
    $null
    $null
    $null
    $null
    $null
    $null
    ;
main_epilogue:
    || 
    +            $r27    ($i64)    $r0    $r26
    ;
pad_1__28:
    || 
    $null
    ;
pad_2__30:
    || 
    $null
    $null
    ;
pad_4__32:
    || 
    $null
    $null
    $null
    $null
    ;
    || 
    $return
    $null
    $null
    $null
    $ld    ($i64)   $r26    [$r27 + 0]
    $null
    $null
    $null
    ;
